--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="home-content">
             <h1>Hi, It's <span>Kamal</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Haloo perkenalkan nama saya M.mundir kamal biasa dipanggil kamal.saya adalah siswa SMKN 1 ADIWERNA saya hobi bermain voly dam bermain game.</p>
+            <p>Haloo perkenalkan nama saya M.mundir kamal biasa dipanggil kamal.saya adalah siswa SMKN 1 ADIWERNA saya hobi bermain voly dam bermain game.cita-cita saya ingin menjadi cyber security.</p>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
