--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <p>Haloo perkenalkan nama saya M.mundir kamal biasa dipanggil kamal.saya adalah siswa SMKN 1 ADIWERNA saya hobi bermain voly dam bermain game.cita-cita saya ingin menjadi cyber security.</p>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/Kamaljuju"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/mundirmal?igsh=MW84d2VqYm5vcmsyZw=="><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="#" class="btn">Hire me</a>
         </div>
