--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Kamaljuju"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://wa.me/085743694258"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="https://www.instagram.com/mundirmal?igsh=MW84d2VqYm5vcmsyZw=="><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="#" class="btn">Hire me</a>
